# extensible-template

./: README.md  extensible-template.cabal
src/Text/: ExtensibleTemplate.hs
src/Text/ExtensibleTemplate/: BasicExtensions.hs  Extension.hs  Interpreter.hs  Param.hs
src/Text/ExtensibleTemplate/Internal/: Parser.hs
test/: TestUtils.hs
test/Text/ExtensibleTemplate/: BasicExtensionsSpec.hs  InterpreterSpec.hs
test/Text/ExtensibleTemplate/Internal/: ParserSpec.hs
