name:                extensible-template
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.ExtensibleTemplate
                     , Text.ExtensibleTemplate.BasicExtensions
                     , Text.ExtensibleTemplate.Extension
                     , Text.ExtensibleTemplate.Internal.Parser
                     , Text.ExtensibleTemplate.Interpreter
                     , Text.ExtensibleTemplate.Param
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
                     , filepath == 1.4.*
                     , mtl == 2.2.*
                     , parsec == 3.1.*
                     , transformers == 0.5.*
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite extensible-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestUtils
                     , Text.ExtensibleTemplate.BasicExtensionsSpec
                     , Text.ExtensibleTemplate.Internal.ParserSpec
                     , Text.ExtensibleTemplate.InterpreterSpec
  build-depends:       base
                     , containers == 0.5.*
                     , hspec == 2.*
                     , extensible-template
                     , mtl == 2.2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
